<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WarningActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="118dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:contentDescription="@string/warningpic2"
                app:srcCompat="@drawable/warning" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="69dp"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/warning"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="137dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:contentDescription="@string/warningpic"
                app:srcCompat="@drawable/warning" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_have_detected_that_you_may_have_symptoms_of_covid_19"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_indicate_the_city_in_the_gta_that_you_live_in" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="236dp"
            android:layout_height="42dp"
            android:entries="@array/cities_array"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,MissingPrefix"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="110dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="118dp"
            android:layout_height="68dp"
            android:layout_marginStart="124dp"
            android:layout_marginLeft="124dp"
            android:layout_marginTop="84dp"
            android:onClick="onClickBtn"
            android:text="View Map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>